Remove UpdateHumdrum, move to HumDrum v1Beta

--- a/Todo/Todo.csproj
+++ b/Todo/Todo.csproj
@@ -39,20 +39,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="TaskTable.cs" />
-    <Compile Include="HumDrum\Collections\Sections.cs" />
-    <Compile Include="HumDrum\Collections\Transformations.cs" />
-    <Compile Include="HumDrum\Operations\DirectorySearch.cs" />
-    <Compile Include="HumDrum\Operations\Logger.cs" />
-    <Compile Include="HumDrum\Operations\Servitor.cs" />
-    <Compile Include="HumDrum\Recursion\TailHelper.cs" />
-    <Compile Include="HumDrum\Structures\BindingsTable.cs" />
-    <Compile Include="HumDrum\Structures\Direction.cs" />
-    <Compile Include="HumDrum\Structures\Tree.cs" />
-    <Compile Include="HumDrum\Collections\Predicates.cs" />
     <Compile Include="TaskScan.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="HumDrum\" />
+    <ProjectReference Include="..\..\HumDrum\HumDrum\HumDrum.csproj">
+      <Project>{715D15D4-68CB-4E55-B9C6-DCFE791C9B00}</Project>
+      <Name>HumDrum</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
