Fix breaking HumDrum change

--- a/Todo/Todo.csproj
+++ b/Todo/Todo.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\..\HumDrum\HumDrum\HumDrum.csproj">
+    <ProjectReference Include="..\..\sb\HumDrum\HumDrum\HumDrum.csproj">
       <Project>{715D15D4-68CB-4E55-B9C6-DCFE791C9B00}</Project>
       <Name>HumDrum</Name>
     </ProjectReference>
